--- a/popup.html
+++ b/popup.html
@@ -7,33 +7,45 @@
     <meta name="description" content="ChromeEye">
     <meta name="author" content="Bahram Bagher">
     <link rel="stylesheet" href="css/popup.css">
-    <script src="js/popup.js"></script>
-</head>
-
-<body>
+  </head>
+  <body>
+    <script src="popup.js"></script>
     <ul>
             <h2>ChromeEye</h2>
 
         <div>
-        Activate<input type="checkbox" name="Activate" value="Activate">
-            </div>
+        Activate<input type="checkbox" name="Activate" value="Activate" id="checkbox">
+        <!-- <button class="button" id="checkbox">Activate</button> -->
+            </div><br>
            
             <div>
             Speed
 <div class="slidecontainer">
-  <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
+  <input type="range" min="1" max="100" value="50" class="slider" id="speed">
 </div>
         </div><div>
             Font-size
 <div class="slidecontainer">
-  <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
+  <input type="range" min="1" max="100" value="50" class="slider" id="size">
 </div>
 
         </div>
-        <!-- <div>
-        Color
-        </div> -->
     </ul>
 </body>
-
 </html> 
+  <!-- <!DOCTYPE html>
+  <html>
+    <head>
+      <style>
+        button {
+          height: 30px;
+          width: 30px;
+          outline: none;
+        }
+      </style>
+    </head>
+    <body>
+      <button id="changeColor"></button>
+         <script src="popup.js"></script>
+    </body>
+  </html> -->
