--- a/popup.html
+++ b/popup.html
@@ -14,12 +14,12 @@
             <h2>ChromeEye</h2>
 
         <div>
-        Activate<input type="checkbox" name="Activate" value="Activate" id="checkbox">
-        <!-- <button class="button" id="checkbox">Activate</button> -->
+        <!-- Activate<input type="checkbox" name="Activate" value="Activate" id="checkbox"> -->
+        <button class="button" id="checkbox">Activate</button>
             </div><br>
            
             <div>
-            Speed
+            Slow
 <div class="slidecontainer">
   <input type="range" min="1" max="100" value="50" class="slider" id="speed">
 </div>
