--- a/popup.html
+++ b/popup.html
@@ -14,7 +14,6 @@
             <h2>ChromeEye</h2>
 
         <div>
-        <!-- Activate<input type="checkbox" name="Activate" value="Activate" id="checkbox"> -->
         <button class="button" id="checkbox">Activate</button>
             </div><br>
            
@@ -30,22 +29,11 @@
 </div>
 
         </div>
+        <div>
+  
+  Color: <input type="color" name="favcolor" value="#ff0000"><br><br>
+        </div>
     </ul>
 </body>
 </html> 
-  <!-- <!DOCTYPE html>
-  <html>
-    <head>
-      <style>
-        button {
-          height: 30px;
-          width: 30px;
-          outline: none;
-        }
-      </style>
-    </head>
-    <body>
-      <button id="changeColor"></button>
-         <script src="popup.js"></script>
-    </body>
-  </html> -->
+ 
