added color input

--- a/popup.html
+++ b/popup.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/popup.css">
   </head>
   <body>
+    <!-- <script type="module" src="functions.js"></script> -->
     <script src="popup.js"></script>
     <ul>
             <h2>ChromeEye</h2>
@@ -31,9 +32,10 @@
         </div>
         <div>
   
-  Color: <input type="color" name="favcolor" value="#ff0000"><br><br>
+  Color: <input type="color" name="favcolor" id="color" value="#ff0000"><br><br>
         </div>
     </ul>
 </body>
+    <script src="popup.js"></script>
 </html> 
  
