--- a/popup.html
+++ b/popup.html
@@ -6,14 +6,12 @@
     <title>ChromeEye Extension</title>
     <meta name="description" content="ChromeEye">
     <meta name="author" content="Bahram Bagher">
-    <link rel="stylesheet" href="css/popup.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <!-- <script type="module" src="functions.js"></script> -->
     <script src="popup.js"></script>
-    <ul>
             <h2>ChromeEye</h2>
-
         <div>
         <button class="button" id="checkbox">Activate</button>
             </div><br>
@@ -32,9 +30,9 @@
         </div>
         <div>
   
-  Color: <input type="color" name="favcolor" id="color" value="#ff0000"><br><br>
+  Color<input type="color" name="favcolor" id="color" value="#ff0000" class="color"><br><br>
         </div>
-    </ul>
+  
 </body>
     <script src="popup.js"></script>
 </html> 
