--- a/popup.html
+++ b/popup.html
@@ -14,7 +14,7 @@
     <button class="button" id="stop">Stop</button>
   </div>
     <div class="clear">
-      Clear text<input type="checkbox" name="clear" value="checkbox" id="clear" class="checkbox">
+      Static read<input type="checkbox" name="clear" value="checkbox" id="clear" class="checkbox">
   </div>
   <div>
     Speed
